--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,12 +1,14 @@
-<header id="header" class="header row justify-content-center m-0">
+<header id="header" class="header m-0">
 
-    <div class="header_encabezado text-center col-md-6 m-0">
+    <div class="header__encabezado header_encabezado text-center col-md-6 m-0">
         <span [routerLink]="['Andres_Martinez']" class="">Juan Andrés Pinzón Martínez</span>
-        <h4>Desarrollador de software</h4>
+        <h4 class="m-0 p-0">Desarrollador de software</h4>
     </div>
-    <ul class="header_menu col-md-6 text-center m-0">
-        <li [routerLink]="['Andres_Martinez/Curriculum']">Currículum</li>
-        <li [routerLink]="['Andres_Martinez/Proyectos']">Proyectos</li>
-        <li (click)="descargar()">Descargar CV</li>
-    </ul>
+    <div class="header__menu">
+        <ul class="text-center m-0 p-0">
+            <li [routerLink]="['Andres_Martinez/Curriculum']">Currículum</li>
+            <li [routerLink]="['Andres_Martinez/Proyectos']">Proyectos</li>
+            <li (click)="descargar()">Descargar CV</li>
+        </ul>
+    </div>
 </header>
