--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -2,8 +2,7 @@
 .header{
     font-family: var(--font--family);
     color: var(--color--text--primary);
-    //background-color: var(--color--background);
-    background-color: aqua;
+    background-color: var(--color--background);
     width: 100%;
     height: 6rem;
 
