--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,9 +1,9 @@
 <main id="Home" class="home">
-    <div class="home_block">
-        <div class="home_block_img">
+    <div class="home__block">
+        <div class="home__block--img">
             <img [src]="MyImg" alt="">
         </div>
-        <div class="home_block_presentacion">
+        <div class="home__block--presentacion">
             <h4>Andres Martinez</h4>
             <p>Soy una persona emprendedora, apasionada por la programación, proactivo, con un aprendizaje autónomo capaz de proponer iniciativas con una sana competitividad y una meta clara, responsable y dispuesto en todo momento a dar lo mejor de mi para garantizar con éxito los resultados de todo proceso.</p>
         </div>
