--- a/src/app/components/proyectos/proyectos.component.scss
+++ b/src/app/components/proyectos/proyectos.component.scss
@@ -1,8 +1,151 @@
 //***** Generales *****//
+ .conocimientos{
+    width: 100%;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    h3{
+        animation-name: CarouselAnimacion;
+        animation-duration: 2s;
+        font-size: 1.8rem;
+        font-weight: 400;
+        letter-spacing: .2rem;
+    }
+
+    &__cont{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin-top: 2rem;
+        &--list{
+            width: 80%;
+            justify-content: center;
+            position:relative;
+            display: inherit;
+            flex-direction:row;
+            li{
+                list-style-type: none;
+                width:100%;
+            }
+            
+            .list--opcion{
+                display: inline-grid;
+                width: 8rem;
+                justify-content: center;
+          
+                .svg_c{
+                    path {
+                        fill: rgb(100, 32, 118) !important;
+                    }
+                }
+                .svg_php{
+                    path {
+                        fill: rgb(77, 88, 142)!important;
+                    }
+                }
+                
+                i{
+                    text-align-last: center;
+                }
+                p{
+                    font-family: var(--font--family);
+                    margin: 0 auto;
+                }
+            }
+        }
+    }
+}
+
+.main{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    margin-bottom: 4rem;
+    //
+    &__cont{
+        width: 80%;
+        margin-top: 2rem;
+        margin-bottom: 2rem;
+        display: inherit;
+        justify-content: center;
+        flex-wrap: wrap;
+        &--empresa{
+            text-align: center;
+            &-card{
+                mat-card-header{
+                    font-family: var(--font--family);
+                    img{
+                        width: 2.5rem;
+                        height: 2.5rem;
+                        margin-right: 1rem;
+                        border-radius: 50%;
+                        box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
+                        object-fit: scale-down;
+                    }
+                }
+
+                mat-card-content{
+                    p{
+                        font-family: var(--font--family);
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
 main{
     width: 100%;
     // height: 75vh;
     font-family: var(--font--family);
+}
+
+
+// Proyectos
+mat-expansion-panel , mat-accordion{
+    width: 100%;
+    background-color: var(--color--background);
+    margin-top: .1rem;
+    margin-bottom: .1rem;
+}
+
+mat-card{
+    animation-name: CenterAnimacion;
+    animation-duration: 1.5s;
+    width: 300px;
+    height: 380px;
+    margin: .5rem;
+    cursor: pointer;
+
+    mat-card-header{
+        justify-content: center;
+    }
+    mat-card-title{
+        font-family: var(--font--family);
+        font-size: 1.1rem;
+        //margin-top: .7rem;
+    }
+    mat-card-content {
+        justify-content: center;
+        p{
+            padding-top: 1rem;
+            font-family: var(--font--family);
+            font-size: .9rem;
+            width: 90%;
+            height: 7rem;
+            margin: 0 auto;
+            text-align: justify;
+        }
+    }
+    mat-card-actions{
+        justify-content: end;
+    }
+    // background-color: var(--color--background);
 }
 
 // Stilño listados
@@ -14,152 +157,12 @@ main{
 
 // Escritorios
 @media screen and (min-width: 1024px) {
-.list_activo,.list_inactivo{
-        display: inherit !important;
-        animation-name: CarouselAnimacion;
-        animation-duration: 2s;
-    }
-
-    // Conocimientos
-    .conocimientos{
-        width: 100%;
-        position: relative;
-        margin-top: 6rem;
-        height: 10vh;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: center;
-        h3{
+    .list_activo,.list_inactivo{
+            display: inherit !important;
             animation-name: CarouselAnimacion;
             animation-duration: 2s;
-            font-size: 1.8rem;
-            font-weight: 400;
-            position: absolute;
-            letter-spacing: .2rem;
-            top: -3.2rem;
-            margin: 0 auto;
-        }
-
-        &_cont{
-            width: 90%;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-top: 2rem;
-            &_list{
-                width: 80%;
-                justify-content: center;
-                position:relative;
-                display: inherit;
-                flex-direction:row;
-                li{
-                    list-style-type: none;
-                    width:100%;
-                }
-               
-                .list_opcion{
-                    display: inline-grid;
-                    width: 8rem;
-                    justify-content: center;
-                    .svg_c{
-                        path {
-                            fill: rgb(100, 32, 118) !important;
-                        }
-                    }
-                    .svg_php{
-                        path {
-                            fill: rgb(77, 88, 142)!important;
-                        }
-                    }
-                    
-                    i{
-                        text-align-last: center;
-                    }
-                    p{
-                        font-family: var(--font--family);
-                        margin: 0 auto;
-                    }
-                }
-            }
-        }
-
     }
 
-
-
-    //
-
-
-
-    // Proyectos
-    mat-expansion-panel , mat-accordion{
-        width: 100%;
-        background-color: var(--color--background);
-        margin-top: .1rem;
-        margin-bottom: .1rem;
-    }
-
-    mat-card{
-        animation-name: CenterAnimacion;
-        animation-duration: 1.5s;
-        width: 300px;
-        margin: .5rem;
-        cursor: pointer;
- 
-        mat-card-header{
-            justify-content: center;
-        }
-        mat-card-title{
-            font-family: var(--font--family);
-            font-size: 1.1rem;
-            //margin-top: .7rem;
-        }
-        mat-card-content {
-            justify-content: center;
-            p{
-                padding-top: 1rem;
-                font-family: var(--font--family);
-                font-size: .9rem;
-                width: 90%;
-                margin: 0 auto;
-                text-align: justify;
-            }
-        }
-        mat-card-actions{
-            justify-content: end;
-        }
-        // background-color: var(--color--background);
-    }
-
-
-    .main{
-        margin-top: 8rem;
-        margin-bottom: 4.5rem;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        //
-        &_empresa{
-            width: 100%;
-            text-align: center;
-            &_section{
-                display: flex;
-            }
-            &_encabezado{
-                img{
-                    width: 2.5rem;
-                    height: 2.5rem;
-                    margin-right: 1rem;
-                    border-radius: 50%;
-                    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
-                }
-            }
-            &_img{
-                object-fit: scale-down;
-            }
-        }
-    }
 }
 
 // telefono
@@ -171,147 +174,11 @@ main{
         animation-duration: 2s;
     }
 
-    // Conocimientos
-    .conocimientos{
-        width: 100%;
-        position: relative;
-        margin-top: 6rem;
-        height: 10vh;
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: row;
-        justify-content: center;
-        h3{
-            animation-name: CarouselAnimacion;
-            animation-duration: 2s;
-            font-size: 1.8rem;
-            font-weight: 400;
-            position: absolute;
-            letter-spacing: .2rem;
-            top: -3.2rem;
-            margin: 0 auto;
-        }
-
-        &_cont{
-            width: 90%;
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-top: 2rem;
-            &_list{
-                width: 80%;
-                justify-content: center;
-                position:relative;
-                display: inherit;
-                flex-direction:row;
-                li{
-                    list-style-type: none;
-                    width:100%;
-                }
-               
-                .list_opcion{
-                    display: inline-grid;
-                    width: 8rem;
-                    justify-content: center;
-                    .svg_c{
-                        path {
-                            fill: rgb(100, 32, 118) !important;
-                        }
-                    }
-                    .svg_php{
-                        path {
-                            fill: rgb(77, 88, 142)!important;
-                        }
-                    }
-                    
-                    i{
-                        text-align-last: center;
-                    }
-                    p{
-                        font-family: var(--font--family);
-                        margin: 0 auto;
-                    }
-                }
-            }
-        }
-
-    }
-
-
-
-    //
-
-
-
-    // Proyectos
-    mat-expansion-panel , mat-accordion{
-        width: 100%;
-        background-color: var(--color--background);
-        margin-top: .1rem;
-        margin-bottom: .1rem;
-    }
-
-    mat-card{
-        animation-name: CenterAnimacion;
-        animation-duration: 1.5s;
-        width: 300px;
-        margin: .5rem;
-        cursor: pointer;
- 
-        mat-card-header{
-            justify-content: center;
-        }
-        mat-card-title{
-            font-family: var(--font--family);
-            font-size: 1.1rem;
-            //margin-top: .7rem;
-        }
-        mat-card-content {
-            justify-content: center;
-            p{
-                padding-top: 1rem;
-                font-family: var(--font--family);
-                font-size: .9rem;
-                width: 90%;
-                margin: 0 auto;
-                text-align: justify;
-            }
-        }
-        mat-card-actions{
-            justify-content: end;
-        }
-        // background-color: var(--color--background);
-    }
-
-
     .main{
-        margin-top: 8rem;
-        margin-bottom: 4.5rem;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        //
-        &_empresa{
-            width: 100%;
-            text-align: center;
-            &_section{
-                display: flex;
-            }
-            &_encabezado{
-                img{
-                    width: 2.5rem;
-                    height: 2.5rem;
-                    margin-right: 1rem;
-                    border-radius: 50%;
-                    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
-                }
-            }
-            &_img{
-                object-fit: scale-down;
-            }
+        &__cont{
+            width: 90%;
         }
     }
-
 }
 
 //movil horizontal
@@ -323,141 +190,30 @@ main{
         animation-duration: 2s;
     }
 
-    // Conocimientos
     .conocimientos{
-        width: 100%;
-        position: relative;
-        margin-top: 6rem;
-        height: 10vh;
-        display: flex;
-        justify-content: center;
-        
-        h3{
-            font-size: 1.8rem;
-            font-weight: 400;
-            position: absolute;
-            letter-spacing: .2rem;
-            top: -2rem;
-            margin: 0 auto;
-        }
-
-        &_cont{
-            width: 90%;
-            display: flex;
-            justify-content: center;
-            margin-top: 2rem;
-            &_list{
+        &__cont{
+            width: 100%;
+            &--list{
                 width: 80%;
-                justify-content: center;
-                position:relative;
-                display: inherit;
-                flex-direction:row;
-                  
                 li{
                     list-style-type: none;
-                    width:100%;
                 }
                
                 .list_opcion{
-                    display: inline-grid;
-                    width: 8rem;
-                    justify-content: center;
-                    .svg_c{
-                        path {
-                            fill: rgb(100, 32, 118) !important;
-                        }
-                    }
-                    .svg_php{
-                        path {
-                            fill: rgb(77, 88, 142)!important;
-                        }
-                    }
-                    
-                    i{
-                        text-align-last: center;
-                    }
-                    p{
-                        font-family: var(--font--family);
-                        margin: 0 auto;
-                    }
+                    width: 5rem;
+                }
+                p{
+                    font-size: .75rem;
                 }
             }
         }
 
-    }
-
-
-
-    //
-
-
-
-    // Proyectos
-    mat-expansion-panel , mat-accordion{
-        width: 100%;
-        background-color: var(--color--background);
-        margin-top: .1rem;
-        margin-bottom: .1rem;
-    }
-
-    mat-card{
-        animation-name: CenterAnimacion;
-        animation-duration: 1.5s;
-        width: 300px;
-        margin: .5rem;
-        cursor: pointer;
- 
-        mat-card-header{
-            justify-content: center;
-        }
-        mat-card-title{
-            font-family: var(--font--family);
-            font-size: 1.1rem;
-            //margin-top: .7rem;
-        }
-        mat-card-content {
-            justify-content: center;
-            p{
-                padding-top: 1rem;
-                font-family: var(--font--family);
-                font-size: .9rem;
-                width: 90%;
-                margin: 0 auto;
-                text-align: justify;
-            }
-        }
-        mat-card-actions{
-            justify-content: end;
-        }
-        // background-color: var(--color--background);
     }
 
 
     .main{
-        margin-bottom: 4.5rem;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
-        margin-top: 2rem;
-        //
-        &_empresa{
-            width: 100%;
-            text-align: center;
-            &_section{
-                display: flex;
-            }
-            &_encabezado{
-                img{
-                    width: 2.5rem;
-                    height: 2.5rem;
-                    margin-right: 1rem;
-                    border-radius: 50%;
-                    box-shadow: rgba(0, 0, 0, 0.05) 0px 1px 2px 0px;
-                }
-            }
-            &_img{
-                object-fit: scale-down;
-            }
+        &__cont{
+            width: 90%;
         }
     }
 }
@@ -471,24 +227,29 @@ main{
 }
     // Conocimientos
     .conocimientos{
-        &_cont{
+        &__cont{
             width: 100%;
-            &_list{
-                width: 90%;
+            &--list{
+                width: 100%;
                 li{
                     list-style-type: none;
-                    width:100%;
                 }
                
                 .list_opcion{
-                    width: 9rem;
                 }
                 p{
-                    font-size: .75rem;
+                    font-size: .6rem;
                 }
             }
         }
 
+    }
+
+
+    .main{
+        &__cont{
+            width: 100%;
+        }
     }
 
 }
@@ -527,7 +288,7 @@ main{
 
 @keyframes CarouselAnimacion2{
     from {
-        transform: translateX(5%);
+        transform: translateX(.2%);
         opacity: 0;
     }
     
