--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -167,8 +167,9 @@
             display: none;
         }
         .header__menu {
+            padding-top: 1rem;
             ul{ 
-                width: 90%;
+                width: 100%;
                 li{
                     height: 2rem;
                     font-size: 0.8rem;
