--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -6,8 +6,8 @@
     </div>
     <div class="header__menu">
         <ul class="text-center m-0 p-0">
-            <li [routerLink]="['Andres_Martinez/Curriculum']">Currículum</li>
-            <li [routerLink]="['Andres_Martinez/Proyectos']">Proyectos</li>
+            <li [routerLink]="['Curriculum']">Currículum</li>
+            <li [routerLink]="['Proyectos']">Proyectos</li>
             <li (click)="descargar()">Descargar CV</li>
         </ul>
     </div>
