--- a/src/app/components/proyectos/proyectos.component.html
+++ b/src/app/components/proyectos/proyectos.component.html
@@ -118,7 +118,7 @@
               </p>
             </mat-card-content>
             <mat-card-actions >
-              <button mat-button (click)="ModalProyectos()">Ver</button>
+              <button mat-button (click)="ModalProyectos(detalles)">Ver</button>
             </mat-card-actions>
         </mat-card>
         
