--- a/src/app/messages/proyectos-modal/proyectos-modal.component.html
+++ b/src/app/messages/proyectos-modal/proyectos-modal.component.html
@@ -1,1 +1,24 @@
-<p>proyectos-modal works!</p>
+<div class="title" mat-dialog-title>
+    <img mat-card-avatar class="m-0 p-0" [src]="Info.logo">
+    <h2 class="m-0 p-0">{{Info.nombre +' ('+ Info.empresa+')'}}</h2>
+</div>
+<mat-dialog-content class="dialog mt-2">
+    <div class="dialog__cont">
+        <h3>Resumen</h3>
+        <p>{{Info.detalles.descripcion}}</p>
+        <mat-divider></mat-divider>
+        <h3 class="mt-3 ">Funciones</h3>
+        <ul>
+            <li *ngFor="let funcion of Info.detalles.funciones">{{funcion}}</li> 
+        </ul>
+        <mat-divider></mat-divider>
+        <h3 class="mt-3">Tecnologías implementadas</h3>
+        <h4>Front-End</h4>
+        <p>{{Info.detalles.lenguajes_Front}}</p>
+        <h4>Back-End</h4>
+        <p>{{Info.detalles.lenguajes_Back}}</p>
+    </div>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>Cerrar</button>
+</mat-dialog-actions>
